<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mzw5443.selfcare.CreateAppointmentActivity">

    <EditText
        android:id="@+id/etMedTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/colorAccent"
        android:ems="10"
        android:hint="@string/med_hint"
        android:inputType="textShortMessage"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UnusedAttribute" />


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/btnSave"
        android:layout_width="55sp"
        android:layout_height="55sp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:clickable="true"
        android:focusable="true"
        android:onClick="onSaveClick"
        android:scaleType="fitXY"
        android:visibility="visible"
        app:backgroundTint="@color/colorAccent"
        app:fabSize="mini"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/save_white"
        android:layout_marginRight="16dp" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/btnDelete"
        android:layout_width="40sp"
        android:layout_height="40sp"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        android:clickable="true"
        android:focusable="true"
        android:longClickable="false"
        android:onClick="confirmDelete"
        android:scaleType="fitXY"
        android:visibility="visible"
        app:fabSize="mini"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/delete_gray"
        android:layout_marginLeft="16dp" />

    <Button
        android:id="@+id/btnMedTimePicker"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:onClick="showTimePickerDialog"
        android:text="@string/defaultTime"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etMedTitle"
        android:layout_marginLeft="8dp" />

    <TextView
        android:id="@+id/tvRepeat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/repeat"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnMedTimePicker"
        android:layout_marginLeft="16dp" />

    <RadioGroup
        android:id="@+id/rgRepeat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:checkedButton="@+id/rbOneTime"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvRepeat"
        android:layout_marginLeft="16dp">

        <RadioButton
            android:id="@+id/rbOneTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="false"
            android:paddingEnd="8sp"
            android:paddingRight="8sp"
            android:text="@string/oneTime"
            tools:layout_editor_absoluteX="56dp"
            tools:layout_editor_absoluteY="321dp"
            tools:ignore="RtlSymmetry" />

        <RadioButton
            android:id="@+id/rbDaily"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:duplicateParentState="false"
            android:paddingEnd="8sp"
            android:paddingRight="8sp"
            android:text="@string/daily"
            tools:layout_editor_absoluteX="68dp"
            tools:layout_editor_absoluteY="275dp"
            tools:ignore="RtlSymmetry" />
    </RadioGroup>

</android.support.constraint.ConstraintLayout>
