<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mzw5443.selfcare.SettingsActivity">

    <TextView
        android:id="@+id/tvTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/theme"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnPurple"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:background="@color/colorPrimary"
        android:onClick="onThemeClick"
        app:layout_constraintEnd_toStartOf="@+id/btnBlue"
        app:layout_constraintStart_toEndOf="@+id/tvTheme"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnBlue"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:background="@color/colorPrimaryBlue"
        android:onClick="onThemeClick"
        app:layout_constraintEnd_toStartOf="@+id/btnGreen"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnPurple"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnGreen"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:background="@color/colorPrimaryGreen"
        android:onClick="onThemeClick"
        app:layout_constraintEnd_toStartOf="@+id/btnRed"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnBlue"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnRed"
        android:layout_width="41dp"
        android:layout_height="40dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:background="@color/colorPrimaryRed"
        android:onClick="onThemeClick"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnGreen"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTheme2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        android:text="@string/sort_by"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTheme" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="64dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tvTheme2"
        app:layout_constraintTop_toBottomOf="@+id/tvTheme"
        android:layout_marginRight="16dp">

        <RadioButton
            android:id="@+id/rbNewest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:onClick="onSortClick"
            android:padding="5dp"
            android:text="@string/newFirst" />

        <RadioButton
            android:id="@+id/rbOldest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onSortClick"
            android:padding="5dp"
            android:text="@string/oldFirst" />
    </RadioGroup>

</android.support.constraint.ConstraintLayout>
