<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mzw5443.selfcare.MedLookupActivity">

    <EditText
        android:id="@+id/etSearch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toStartOf="@+id/btnSearch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:drawableLeft="@drawable/serach_black_24dp"
        android:drawableStart="@drawable/serach_black_24dp"
        android:onClick="onClick"
        android:text="@string/search"
        android:textColor="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="8dp" />

    <TextView
        android:id="@+id/tvNoSearch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:freezesText="true"
        android:text="@string/no_search"
        android:textAlignment="center"
        android:textSize="18sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etSearch" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@+id/btmToolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSearch">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvPillName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:freezesText="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/colorAccent"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvDescTitle"
                android:layout_width="0dp"
                android:layout_height="18dp"
                android:layout_marginTop="8dp"
                android:background="@color/ic_note_background"
                android:freezesText="true"
                android:text="@string/description"
                android:textColor="@color/colorAccent"
                android:textStyle="italic"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvPillName" />

            <TextView
                android:id="@+id/tvDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:freezesText="true"
                android:textColor="@color/colorAccent"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvDescTitle"
                android:layout_marginLeft="16dp" />

            <TextView
                android:id="@+id/tvSideEffTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/ic_note_background"
                android:freezesText="true"
                android:text="@string/sideEff"
                android:textColor="@color/colorAccent"
                android:textStyle="italic"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvDescription" />

            <TextView
                android:id="@+id/tvSideEffects"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:freezesText="true"
                android:textColor="@color/colorAccent"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvSideEffTitle"
                android:layout_marginLeft="16dp" />

            <TextView
                android:id="@+id/tvTipsTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/ic_note_background"
                android:freezesText="true"
                android:text="@string/tips"
                android:textColor="@color/colorAccent"
                android:textStyle="italic"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvSideEffects" />

            <TextView
                android:id="@+id/tvTips"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="16dp"
                android:freezesText="true"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvTipsTitle"
                android:layout_marginRight="8dp"
                android:layout_marginLeft="16dp" />

            <TextView
                android:id="@+id/tvLinkTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/ic_note_background"
                android:freezesText="true"
                android:text="@string/link"
                android:textColor="@color/colorAccent"
                android:textStyle="italic"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvTips" />

            <TextView
                android:id="@+id/tvLink"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="16dp"
                android:clickable="true"
                android:focusable="true"
                android:freezesText="true"
                android:paddingBottom="8sp"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvLinkTitle"
                android:layout_marginRight="8dp"
                android:layout_marginLeft="16dp" />
        </android.support.constraint.ConstraintLayout>

    </ScrollView>

    <android.support.v7.widget.Toolbar
        android:id="@+id/btmToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/imgbtnIodine"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:background="@android:drawable/screen_background_light_transparent"
        android:onClick="onIodineClick"
        app:layout_constraintBottom_toBottomOf="@+id/btmToolbar"
        app:layout_constraintEnd_toEndOf="@+id/btmToolbar"
        app:layout_constraintTop_toTopOf="@+id/btmToolbar"
        app:srcCompat="@mipmap/ic_iodine"
        android:layout_marginRight="8dp"
        android:contentDescription="@string/iodineLogo" />

    <TextView
        android:id="@+id/tvIodineText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/iodine"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btmToolbar"
        app:layout_constraintEnd_toStartOf="@+id/imgbtnIodine"
        app:layout_constraintTop_toBottomOf="@+id/btmToolbar"
        android:layout_marginRight="8dp" />

</android.support.constraint.ConstraintLayout>
