<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mzw5443.selfcare.CreateAppointmentActivity">

    <EditText
        android:id="@+id/etApptTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/colorAccent"
        android:ems="10"
        android:hint="@string/appt_hint"
        android:inputType="textShortMessage"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UnusedAttribute" />


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/btnSave"
        android:layout_width="55sp"
        android:layout_height="55sp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:clickable="true"
        android:focusable="true"
        android:onClick="onSaveClick"
        android:scaleType="fitXY"
        android:visibility="visible"
        app:backgroundTint="@color/colorAccent"
        app:fabSize="mini"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/save_white"
        android:layout_marginRight="16dp" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/btnDelete"
        android:layout_width="40sp"
        android:layout_height="40sp"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        android:clickable="true"
        android:focusable="true"
        android:longClickable="false"
        android:onClick="confirmDelete"
        android:scaleType="fitXY"
        android:visibility="visible"
        app:fabSize="mini"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/delete_gray"
        android:layout_marginLeft="16dp" />

    <Button
        android:id="@+id/btnDatePicker"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:onClick="showDatePickerDialog"
        android:text="@string/defaultDate"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etApptTitle"
        android:layout_marginLeft="8dp" />

    <Button
        android:id="@+id/btnTimePicker"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:onClick="showTimePickerDialog"
        android:text="@string/defaultTime"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnDatePicker"
        android:layout_marginLeft="8dp" />

</android.support.constraint.ConstraintLayout>
